# MS-Playground

./: .gitignore  LICENSE  README.md
docker/: Cargo.toml  README.md
docker/scapegoat/: Dockerfile
docker/scapegoat/src/: main.py
docker/src/: main.rs
docker/src/docker/: docker_container.rs  mod.rs
lapin/: Cargo.toml
lapin/src/: main.rs  no-broker.rs  rabbit.rs
