[package]
name = "tokio-play"
version = "0.1.0"
authors = ["ethanshry"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.7"
futures-util = "0.3"
tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
log = "0.4.0"

dotenv = "0.15.0"
env_logger = "0.7"
flate2 = "1.0"
tar = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }