[package]
name = "tokio-play"
version = "0.1.0"
authors = ["ethanshry"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin="1.2.1"
tokio-amqp = "0.1.3"
futures-util = "0.3.5"
tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
async-trait = "0.1.36"